--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="container pt-5">
             <div class="row">
 
-                <div class="col-12 col-xl-6 mx-auto">
+                <!-- <div class="col-12 col-xl-6 mx-auto">
                     <img src="img/banner.png" alt="">
-                </div>
+                </div> -->
 
                 <div class="col-12  text-center">
                     <div id="name" class="area">Mom!</div>
